--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f0f0f0;
+            background-color: #e5e5e8;
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: #09ac83;
             margin-top: 60px; /* Add margin to ensure space below the banner */
         }
         /* Table Styles */
@@ -22,15 +22,15 @@
             border-collapse: collapse;
             margin-bottom: 20px;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(255, 30, 30, 0.1);
         }
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #0f8597;
             padding: 10px;
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #09ac83;
         }
         /* Counters and Notifications */
         .counter {
@@ -40,7 +40,7 @@
         }
         .counter span {
             font-weight: bold;
-            color: #007bff;
+            color: #1395c1;
         }
         /* Notification Button */
         #playSoundBtn {
@@ -79,7 +79,7 @@
             border-radius: 4px;
         }
         .date-filter button:hover {
-            background-color: #0056b3;
+            background-color: #1786af;
         }
         /* Money Effect */
         @keyframes money-effect {
