--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f0f0f0;
+            background-color: #e7ebe7;
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: #036c11 ;
             margin-top: 60px; /* Add margin to ensure space below the banner */
         }
         /* Table Styles */
@@ -30,7 +30,7 @@
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #bcc3bc;
         }
         /* Counters and Notifications */
         .counter {
@@ -57,7 +57,7 @@
             transition: background-color 0.3s;
         }
         #playSoundBtn:hover {
-            background-color: #0056b3;
+            background-color: #036c11;
         }
         /* Date Filter */
         .date-filter {
@@ -71,7 +71,7 @@
         .date-filter button {
             padding: 5px 10px;
             font-size: 16px;
-            background-color: #007bff;
+            background-color: #036c11;
             color: #fff;
             border: none;
             cursor: pointer;
@@ -79,13 +79,13 @@
             border-radius: 4px;
         }
         .date-filter button:hover {
-            background-color: #0056b3;
+            background-color: #036c11;
         }
         /* Money Effect */
         @keyframes money-effect {
-            0% { color: #007bff; transform: scale(1); }
-            50% { color: #28a745; transform: scale(1.5); }
-            100% { color: #007bff; transform: scale(1); }
+            0% { color: #036c11; transform: scale(1); }
+            50% { color: #036c11; transform: scale(1.5); }
+            100% { color: #036c11; transform: scale(1); }
         }
         .money-effect {
             animation: money-effect 1.5s ease-in-out;
@@ -100,7 +100,7 @@
             top: -50px;
             left: 0;
             right: 0;
-            background-color: #46c35f;
+            background-color: #036c11;
             color: white;
             text-align: center;
             padding: 10px 0;
