--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #036c11;
             padding: 10px;
             text-align: left;
         }
